nginx/reject-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reject-service
  namespace: ingress-nginx
spec:
  ports:
    - port: 80
      protocol: TCP
