nginx/reject-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-reject
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/server-snippet: |
      return 444;
spec:
  rules:
    - host: ""
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reject-service
                port:
                  number: 80
